--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,6 @@
 html, body {
   margin: 0;
   font-family: "Sans serif";
-  line-height: 25px;
 }
 
 .row {
@@ -87,6 +86,49 @@ section, header {
   color: #828282;
 }
 
-div.image.header {
+section .title {
+  font-size: 50px;
+}
+
+section .subtitle {
+  font-size: 20px;
+}
+
+.how-it-works {
+  padding: 50px;
+  max-width: 1000px;
+  margin: 0 auto;
+  height: inherit;
+  text-align: center;
+}
+
+.how-it-works .title {
+  margin: 30px 0;
+}
+
+.how-it-works p {
+  color: #828282;
+}
+
+footer {
+  padding: 50px 20px;
+  border-top: 1px solid #E3E3E3;
+  color: #828282;
+  text-align: center;
+}
+
+header .image {
+  background-image: url('../images/header.jpg');
+}
+
+.least-expensive .image {
+  background-image: url('../images/header.jpg');
+}
+
+.fastest .image {
+  background-image: url('../images/header.jpg');
+}
+
+.security .image {
   background-image: url('../images/header.jpg');
 }
