--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -12,6 +12,7 @@ html, body {
 .col {
   display: table-cell;
   vertical-align: top;
+  height: 100%;
 }
 
 div.image {
@@ -36,8 +37,8 @@ section, header {
 }
 
 .content {
-  padding: 0 100px;
-  height: 100vh;
+  padding: 0 50px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,7 +53,10 @@ section, header {
 }
 
 .waitlist-form {
-  margin-top: 40px;
+  margin: 40px 0px;
+  padding: 20px;
+  border: 2px dashed #C4C4C4;
+  border-radius: 4px;
 }
 
 .waitlist-form label {
@@ -60,24 +64,27 @@ section, header {
   margin: 20px 0;
 }
 
+.waitlist-form .row {
+  border-spacing: 10px;
+}
+
 .waitlist-form input {
-  padding: 0 10px;
   border: 1px solid #C4C4C4;
   border-radius: 5px;
-  width: 90%;
   height: 50px;
+  width: 100%;
+  text-indent: 10px;
 }
 
 .waitlist-form button {
-  padding: 10px;
-  width: 100%;
-  height: 100%;
   background: #F8892C;
   border-radius: 4px;
   border: 0;
   color: white;
   font-weight: bold;
-  height: 50px;
+  cursor: pointer;
+  width: 100%;
+  height: 54px;
 }
 
 .waitlist-form .bottom-line {
@@ -100,6 +107,7 @@ section .subtitle {
   margin: 0 auto;
   height: inherit;
   text-align: center;
+  border-top: 1px solid #E3E3E3;
 }
 
 .how-it-works .title {
@@ -131,4 +139,37 @@ header .image {
 
 .security .image {
   background-image: url('../images/header.jpg');
+}
+
+@media (max-width: 930px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .row .content {
+    order: 2;
+  }
+
+  section, header, .fill-screen-height {
+    height: auto;
+  }
+
+  .image {
+    height: 40vh !important;
+  }
+
+  .waitlist-form input {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 930px) {
+  .content {
+    padding: 20px;
+  }
+
+  .title {
+    font-size: 30px !important;
+  }
 }
