--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -19,7 +19,7 @@ div.image {
   width: 100%;
   height: 100vh;
   background-size: cover;
-  background-position: center;
+  background-position: 0 100vh;
 }
 
 .fill-screen-height {
@@ -132,19 +132,19 @@ footer {
 }
 
 header .image {
-  background-image: url('../images/header.jpg');
+  background-image: url('../images/header.jpeg');
 }
 
 .least-expensive .image {
-  background-image: url('../images/header.jpg');
+  background-image: url('../images/money.jpeg');
 }
 
 .fastest .image {
-  background-image: url('../images/header.jpg');
+  background-image: url('../images/fast.jpeg');
 }
 
 .security .image {
-  background-image: url('../images/header.jpg');
+  background-image: url('../images/header.jpeg');
 }
 
 @media (max-width: 930px) {
@@ -161,8 +161,11 @@ header .image {
     height: auto;
   }
 
-  .image {
+  div.image {
     height: 40vh !important;
+    width: 100%;
+    background-position-y: 40vh;
+    background-position-x: center;
   }
 
   .waitlist-form input {
