--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -54,7 +54,7 @@ header {
 
 .content {
   min-height: 100vh;
-  padding: 0 50px;
+  padding: 10px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,6 +66,10 @@ header {
 
 .subtitle {
   font-weight: lighter;
+}
+
+.logo {
+  margin-bottom: 150px;
 }
 
 .waitlist-form {
